fixed frontpage sidebar overflow issue

--- a/src/components/MainMap/mainmap.module.css
+++ b/src/components/MainMap/mainmap.module.css
@@ -100,7 +100,8 @@
 		height: 100%;
 	}
 	.main-map-sidebar {
+		grid-area: sidebar;
 		background: black;
-
+		min-height: 50vh;
 	}
 }
